[Gold III] Title: 줄 세우기, Time: 428 ms, Memory: 49224 KB -BaekjoonHub